code_exp/log/run_experiments_separately_20250715_101457.log
2025-07-15 10:14:57,862 - INFO - ====== 开始分别运行所有实验 ======
2025-07-15 10:14:57,862 - INFO - 步骤1: 生成证书数据集
2025-07-15 10:14:57,862 - INFO - 运行命令：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/generate_dataset.py']
2025-07-15 10:15:07,410 - INFO - 命令成功完成：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/generate_dataset.py']
2025-07-15 10:15:07,411 - INFO - 步骤2: 检查Hardhat节点
2025-07-15 10:15:07,414 - INFO - Hardhat节点已在运行
2025-07-15 10:15:07,414 - INFO - 运行 实验1: 基础性能评估
2025-07-15 10:15:07,414 - INFO - 运行实验1 - 基础性能评估
2025-07-15 10:15:07,414 - INFO - 运行命令：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp1.py']
2025-07-15 10:15:07,423 - ERROR - 命令执行失败：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp1.py']
2025-07-15 10:15:07,424 - ERROR - 错误输出：  File "/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp1.py", line 51
    from blockchain_helper import BlockchainHelper
IndentationError: unexpected indent

2025-07-15 10:15:07,424 - ERROR - 实验1: 基础性能评估 运行失败，继续下一个实验
2025-07-15 10:15:07,424 - INFO - 运行 实验2: 吞吐量分析
2025-07-15 10:15:07,424 - INFO - 运行实验2 - 吸吐量分析
2025-07-15 10:15:07,424 - INFO - 运行命令：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp2.py']
2025-07-15 10:15:07,432 - ERROR - 命令执行失败：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp2.py']
2025-07-15 10:15:07,433 - ERROR - 错误输出：  File "/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp2.py", line 51
    from blockchain_helper import BlockchainHelper
IndentationError: unexpected indent

2025-07-15 10:15:07,433 - ERROR - 实验2: 吞吐量分析 运行失败，继续下一个实验
2025-07-15 10:15:07,433 - INFO - 运行 实验3: 可扩展性分析
2025-07-15 10:15:07,433 - INFO - 运行实验3 - 可扩展性测试
2025-07-15 10:15:07,433 - INFO - 运行命令：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp3.py']
2025-07-15 10:15:07,441 - ERROR - 命令执行失败：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp3.py']
2025-07-15 10:15:07,441 - ERROR - 错误输出：  File "/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp3.py", line 51
    from blockchain_helper import BlockchainHelper
IndentationError: unexpected indent

2025-07-15 10:15:07,441 - ERROR - 实验3: 可扩展性分析 运行失败，继续下一个实验
2025-07-15 10:15:07,441 - INFO - 运行 实验4: 存储成本对比分析
2025-07-15 10:15:07,441 - INFO - 运行实验4 - 存储成本对比分析
2025-07-15 10:15:07,442 - INFO - 运行命令：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp4.py']
2025-07-15 10:15:07,450 - ERROR - 命令执行失败：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp4.py']
2025-07-15 10:15:07,450 - ERROR - 错误输出：  File "/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp4.py", line 51
    from blockchain_helper import BlockchainHelper
IndentationError: unexpected indent

2025-07-15 10:15:07,450 - ERROR - 实验4: 存储成本对比分析 运行失败，继续下一个实验
2025-07-15 10:15:07,450 - INFO - 运行 实验5: 撤销机制效率分析
2025-07-15 10:15:07,450 - INFO - 运行实验5 - 撤销机制效率分析
2025-07-15 10:15:07,451 - INFO - 运行命令：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp5.py']
2025-07-15 10:15:07,459 - ERROR - 命令执行失败：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp5.py']
2025-07-15 10:15:07,459 - ERROR - 错误输出：  File "/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp5.py", line 51
    from blockchain_helper import BlockchainHelper
    ^^^^
SyntaxError: expected 'except' or 'finally' block

2025-07-15 10:15:07,459 - ERROR - 实验5: 撤销机制效率分析 运行失败，继续下一个实验
2025-07-15 10:15:07,459 - INFO - 运行 实验6: 节点故障恢复测试
2025-07-15 10:15:07,459 - INFO - 运行实验6 - 节点故障恢复测试
2025-07-15 10:15:07,459 - INFO - 运行命令：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/run_fault_test.py']
